--- a/index.html
+++ b/index.html
@@ -15,15 +15,13 @@
     <section>
         <div>
             <div class="dateTime">
-                <div><i class="fa-solid fa-calendar-days"></i> APRIL 30, 2024</div>
-                <div><i class="fa-solid fa-clock"></i>START :00</div>
+                <div><i class="fa-solid fa-calendar-days"></i> COMING SOON...</div>
+                <div><i class="fa-solid fa-clock"></i>START 00:00</div>
             </div>
-            <h1>How to Organize a <br> Home Budget</h1>
+            <h1>Never be owed for long than two minutes again! (Straight to your bank account)</h1>
             <div class="line"></div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At neque enim, consequuntur delectus optio
-                quisquam, natus consequatur voluptate sit asperiores aspernatur repellat, non esse quibusdam doloribus
-                molestias deserunt culpa laudantium?</p>
-            <div><input type="text" placeholder="Email"> <button>Join</button></div>
+            <p>Vouch helps individuals and businesses avoid credit risk and bad-debts seamlessly.</p>
+            <div><input type="text" placeholder="Email"> <button>Join The Waitlist</button></div>
         </div>
     </section>
 </body>
