--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 
 <body>
     <section>
+        <div class="logo-cont">
+            <img src="./vouchl.png" alt="logo">
+        </div>
         <div>
             <div class="dateTime">
                 <div><i class="fa-solid fa-calendar-days"></i> COMING SOON...</div>
@@ -21,7 +24,7 @@
             <h1>Never be owed for long than two minutes again! (Straight to your bank account)</h1>
             <div class="line"></div>
             <p>Vouch helps individuals and businesses avoid credit risk and bad-debts seamlessly.</p>
-            <div><input type="text" placeholder="Email"> <button>Join The Waitlist</button></div>
+            <div class="button-cont"><input type="text" placeholder="Email"> <button>Join The Waitlist</button></div>
         </div>
     </section>
 </body>
