--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
 <body>
     <section>
-        <div class="logo-cont">
+        <!-- <div class="logo-cont">
             <img src="./vouchl.png" alt="logo">
-        </div>
+        </div> -->
         <div>
             <div class="dateTime">
                 <div><i class="fa-solid fa-calendar-days"></i> COMING SOON...</div>
