--- a/index.html
+++ b/index.html
@@ -18,8 +18,12 @@
         </div> -->
         <div>
             <div class="dateTime">
-                <div><i class="fa-solid fa-calendar-days"></i> COMING SOON...</div>
-                <div><i class="fa-solid fa-clock"></i>START 00:00</div>
+                <div><i class="fa-solid fa-calendar-days"></i>
+                    <p>COMING SOON...</p>
+                </div>
+                <div><i class="fa-solid fa-clock"></i>
+                    <p>START 00:00</p>
+                </div>
             </div>
             <h1>Never be owed for long than two minutes again! (Straight to your bank account)</h1>
             <div class="line"></div>
