--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         <div>
             <div class="dateTime">
                 <div><i class="fa-solid fa-calendar-days"></i>
-                    <p>COMING SOON...</p>
+                    COMING SOON...
                 </div>
                 <div><i class="fa-solid fa-clock"></i>
-                    <p>START 00:00</p>
+                    START 00:00
                 </div>
             </div>
             <h1>Never be owed for long than two minutes again! (Straight to your bank account)</h1>
