--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 
 <body>
     <section>
-        <!-- <div class="logo-cont">
-            <img src="./vouchl.png" alt="logo">
-        </div> -->
-        <div>
+        <div class="logo-cont">
+            <img src="./vouch.png" alt="logo">
+        </div>
+        <div class="sub-sec">
             <div class="dateTime">
                 <div><i class="fa-solid fa-calendar-days"></i>
                     COMING SOON...
