--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vouch Waitlist</title>
-    <link rel="icon" href="./vouch.png"/>
+    <link rel="icon" href="./vouch.png" />
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
@@ -29,9 +29,13 @@
             <h1>Never be owed for long than two minutes again! (Straight to your bank account)</h1>
             <div class="line"></div>
             <p>Vouch helps individuals and businesses avoid credit risk and bad-debts seamlessly.</p>
-            <div class="button-cont"><input type="text" placeholder="Email"> <button>Join The Waitlist</button></div>
+            <div class="button-cont"><input id="emailInput" type="email" placeholder="Email" required> <button id="joinBtn" type="submit">Join
+                    The Waitlist</button></div>
+            <p id="msgEl"></p>
+            
         </div>
     </section>
+    <script src="app.js"></script>
 </body>
 
 </html>
