--- a/index.html
+++ b/index.html
@@ -29,10 +29,14 @@
             <h1>Never be owed for long than two minutes again! (Straight to your bank account)</h1>
             <div class="line"></div>
             <p>Vouch helps individuals and businesses avoid credit risk and bad-debts seamlessly.</p>
-            <div class="button-cont"><input id="emailInput" type="email" placeholder="Email" required> <button id="joinBtn" type="submit">Join
+            <div class="loading-msg">
+                <p id="msgEl"></p>
+                <div id="loadingAnimation" class="loading-animation"></div>
+            </div>
+            <div class="button-cont"><input id="emailInput" type="email" placeholder="Email" required> <button
+                    id="joinBtn" type="submit">Join
                     The Waitlist</button></div>
-            <p id="msgEl"></p>
-            
+
         </div>
     </section>
     <script src="app.js"></script>
